# Hexapod-2.0

./: .gitignore  .gitmodules  CMakeLists.txt  Calculations.xlsx  Hexapod.code-workspace  README.md  catepillar_skręt.xlsx  main.cpp  ml.py  platformio.ini  print_serial_data.py  serial_read_data.py  test_combined_generator.py  test_generator.py
Logic/: CMakeLists.txt
Logic/inc/: FootCoordinates.hpp  Leg.hpp  LegPositionControllerInterface.hpp  LegPositionController_KneeFront.hpp  LegRange.hpp  MoveController.hpp  Servo.hpp  SimplifiedLEg.hpp  body.hpp
Logic/src/: Leg.cpp  LegPositionControllerInterface.cpp  LegPositionController_KneeBack.cpp  LegPositionController_KneeFront.cpp  LegServos.cpp  MoveController.cpp  Servo.cpp  body.cpp
WalkingModes/inc/: LegContainer.hpp  defaultPosition.hpp  tripodWalk.hpp  walkingInterface.hpp
WalkingModes/src/: defaultPosition.cpp  tripodWalk.cpp  walkingInterface.cpp
drivers/: CMakeLists.txt
drivers/inc/: body_driver.hpp  i2c_driver.hpp  pwm_driver.hpp  servo_driver_interface.hpp  servo_driver_left.hpp  servo_driver_right.hpp
drivers/src/: body_driver.cpp  gpio_driver.cpp  pwm_driver.cpp  servo_driver_interface.cpp  servo_driver_left.cpp
include/: BasicServo.hpp  Body.hpp  Leg.hpp  ListOfSteps.h  Results.h  Servo.hpp  config.h  constants.h  constants.hpp  enum_types.h  externs.hpp  functions.h  global.hpp  pwm_driver.hpp
include/Logic/: Body.hpp  Coordinates.hpp  Leg.hpp  LegPositionController.hpp  LegPositionControllerInterface.hpp  LegPositionController_KneeBack.hpp  LegRange.hpp  LegServos.hpp  Result.hpp  Servo.hpp  ServoL.hpp  ServoPositions.hpp  ServoVelocity.hpp  Servos_struct.hpp  SlaveServo.hpp
include/Logic/WalkingModes/: LegContainer.hpp  walkingInterface.hpp
include/drivers/: pwm_driver.hpp
old/include/: enum_types.h  uart.hpp
old/include/Logic/: LegPositionController.hpp
old/include/drivers/: body_driver.hpp  pwm_driver.hpp
old/src/: Servo.cpp  hexapod.cpp
old/src/Logic/: LegPositionController.cpp  body.cpp
old/src/drivers/: pwm_driver.cpp
old/test/test_native/: test_leg.cpp  test_slave_servo.cpp
src/: Leg.cpp  Servo.cpp  body.cpp  functions.cpp  hexapod.cpp  main.cpp  pwm_driver.cpp  robot_driver.cpp  uart.cpp
src/Logic/: CMakeLists.txt  Leg.cpp  LegPositionController.cpp  LegPositionController_KneeBack.cpp  LegPositionController_KneeFront.cpp  LegServos.cpp  Servo.cpp  ServoL.cpp  ServoVelocity.cpp  Servos_struct.cpp  SlaveServo.cpp  SlaverServo.cpp  body.cpp
src/WalkingModes/: CMakeLists.txt
src/drivers/: CMakeLists.txt  body_driver.cpp
src/drivers/inc/: GD25VQ21B.hpp  body.hpp  gpio.hpp  gpio_driver.hpp  i2c.hpp  leg_controller.hpp  legs_controller.hpp  mcp3008.hpp  pinout.hpp  pwm.hpp  pwm_driver.hpp  robot_current_sensors.hpp  servo_driver_interface.hpp  servo_driver_left.hpp  servo_interface.hpp  servo_left.hpp  servo_right.hpp  spi.hpp  uart.hpp
src/drivers/src/: GD25VQ21B.cpp  body.cpp  body_driver.cpp  gpio.cpp  gpio_driver.cpp  i2c.cpp  i2c_driver.cpp  leg_controller.cpp  legs_controller.cpp  mcp3008.cpp  pwm.cpp  robot_current_sensors.cpp  servo_driver_interface.cpp  servo_driver_left.cpp  servo_driver_right.cpp  servo_interface.cpp  servo_left.cpp  servo_right.cpp  spi.cpp  uart.cpp
src/hexapod/: CMakeLists.txt
src/web/: CMakeLists.txt  makefsdata.py
src/web/html_files/: calibrate_servos.shtml  index.shtml
src/web/inc/: cgi.hpp  gpio_w.hpp  lwipopts.h  pico_w_object.hpp  server.hpp  ssi.hpp  wifi_passwords.hpp
src/web/src/: cgi.cpp  gpio_w.cpp  server.cpp  ssi.cpp
src/webServer/: CMakeLists.txt  makefsdata.py
src/webServer/inc/: cgi.hpp  lwipopts.h  ssi.hpp
src/webServer/src/: cgi.cpp  ssi.cpp
test/: CMakeLists.txt  test.cpp
test/mocks/: pwm_driver_mock.cpp  pwm_driver_mock.hpp
test/test_desktop/: test.cpp  test_pwm_driver.cpp  test_pwm_driver.h  test_servo.cpp
test/test_hw/inc/: test_gpio.hpp  test_servo.hpp
test/test_hw/src/: test_gpio.cpp  test_servo.cpp
test/test_native/: CMakeLists.txt  bootstrap.cpp  test_BasicServo.cpp  test_Leg.cpp  test_LegContainer.cpp  test_LegPositionController.cpp  test_LegPositionControllerInterface.cpp  test_LegPositionController_LegFront.cpp  test_Servo.cpp  test_ServoVelocity.cpp  test_defaultPosition.cpp  test_gaitController.cpp  test_leg.cpp  test_slave_servo.cpp  test_tripod_walk.cpp  test_walkingInterface.cpp
test_combined/: servo.cpp
test_combined/test_leg/: test_leg.cpp
test_combined/test_servo/: test_servo.cpp
test_combined/test_tripod_foreward/: test_tripod_foreward.cpp
test_hardware_drivers/: CMakeLists.txt
test_hardware_drivers/test_flash/: CMakeLists.txt  test_flash.cpp
test_hardware_drivers/test_gpio/: CMakeLists.txt  test_gpio.cpp
test_hardware_drivers/test_gpio_w/: CMakeLists.txt  test_gpio_w.cpp
test_hardware_drivers/test_mcp3008/: CMakeLists.txt  test_mcp3008.cpp
test_hardware_drivers/test_pwm/: CMakeLists.txt  test_pwm.cpp
test_hardware_drivers/test_robot_current_sensors/: CMakeLists.txt  test_robot_current_sensors.cpp
test_hardware_drivers/test_uart/: CMakeLists.txt  test_uart.cpp
test_hw/: CMakeLists.txt
test_hw/inc/: test_pwm.hpp
test_hw/src/: test_pwm.cpp  test_servo.cpp
test_system/: CMakeLists.txt
test_system/test_calibration/: CMakeLists.txt  test_calibration.cpp
test_system/test_caterpillar_foreward/: CMakeLists.txt  test_caterpillar_foreward.cpp
test_system/test_cgi/: CMakeLists.txt  test_cgi.cpp
test_system/test_ground_detection/: CMakeLists.txt  test_ground_detection.cpp
test_system/test_leg/: CMakeLists.txt  test_leg.cpp
test_system/test_leg_groung_detection/: test_leg_groung_detection.cpp
test_system/test_metachromatic_forward/: CMakeLists.txt  test_metachromatic_forward.cpp
test_system/test_monochromatic_forward/: CMakeLists.txt  test_monochromatic_forward.cpp
test_system/test_servo/: CMakeLists.txt
test_system/test_single_leg_lift_and_lower/: CMakeLists.txt  test_single_leg_lift_and_lower.cpp
test_system/test_tripod_foreward/: CMakeLists.txt  test_tripod_foreward.cpp
test_system/test_webServer/: CMakeLists.txt  test_webServer.cpp
(+51 files in other folders)
