# cmake_minimum_required(VERSION 3.12) # version can be different

# project(hexapod-tests) #name of your project

# add_subdirectory(googletest) # add googletest subdirectory

# include_directories(googletest/include) # this is so we can #include <gtest/gtest.h>

# add_executable(bootstrap test_native/bootstrap.cpp) # add this executable
# add_executable(defaultPosition test_native/test_defaultPosition.cpp) # add this executable

# target_link_libraries(bootstrap PRIVATE gtest) # link google test to this executable
# target_link_libraries(defaultPosition PRIVATE gtest)
# project(Hexapod-tests C CXX)

# set(CMAKE_C_STANDARD 11)
# set(CMAKE_CXX_STANDARD 17)

# add_executable()
# add_library(LOGIC)
# add_library(DRIVERS)
# add_library(WALKING_MODES)

