add_subdirectory(test_webServer)
add_subdirectory(test_cgi)
add_subdirectory(test_tripod_foreward)
add_subdirectory(test_leg)
add_subdirectory(test_ground_detection)
add_subdirectory(test_servo)
add_subdirectory(test_single_leg_lift_and_lower)
add_subdirectory(test_calibration)
add_subdirectory(test_caterpillar_foreward)
add_subdirectory(test_metachromatic_forward)
